argocd/manifests/prod/apps/snapotter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapotter
  namespace: snapotter
  labels:
    app: snapotter
    app.kubernetes.io/name: snapotter
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  selector:
    app: snapotter
  type: ClusterIP
  ports:
    - name: http
      port: 1349
      protocol: TCP
      targetPort: 1349
