argocd/manifests/prod/apps/snapotter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snapotter
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/max-body-size: "100M"
    traefik.ingress.kubernetes.io/readtimeout: "900"
    traefik.ingress.kubernetes.io/writetimeout: "900"
    traefik.ingress.kubernetes.io/idletimeout: "900"

spec:
  ingressClassName: traefik
  rules:
  - host: snapotter.pengiuns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snapotter
            port:
              number: 1349
  tls:
  - hosts:
      - snapotter.pengiuns.com
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
